--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,11 @@
 [build]
-command = "npm run build"   # 동일
-publish = "build"           # ✅ CRA는 build/ (Vite는 dist/)
+command = "npm run build"
+publish = "build"
 
 [dev]
-command = "npm start"       # ✅ CRA dev 명령
-targetPort = 3000           # CRA dev 서버 포트
-port = 8888                 # Netlify Dev 프록시 포트
+command = "npm start"
+targetPort = 3000
+port = 8888
 
 [functions]
 directory = "netlify/functions"
@@ -19,5 +19,5 @@ status = 200
 # SPA 라우팅
 [[redirects]]
 from = "/*"
-to = "/public/index.html"
+to = "/index.html"
 status = 200
