--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@ publish = "build"
 command = "npm start"
 targetPort = 3000
 port = 8888
+publish = "public"
 
 [functions]
 directory = "netlify/functions"
